Week 2/tws/tws/tiny/parser/y.output
Grammar

    0 $accept: Tiny $end

    1 Tiny: PROGRAM Name ':' Dclns Body Name '.'

    2 Dclns: VAR Dclns_1
    3      | ε

    4 Dclns_1: ε
    5        | Dcln ';' Dclns_1

    6 Dcln: Dcln_1

    7 Dcln_1: Name ':' Type
    8       | Name ',' Dcln_1

    9 Type: INTEGER
   10     | BOOLEAN

   11 Body: BEGINX Body_1

   12 Body_1: Statement END
   13       | Statement ';' Body_1

   14 Statement: Name ASSIGNMENT Expression
   15          | OUTPUT '(' Expression ')'
   16          | IF Expression THEN Statement ELSE Statement
   17          | WHILE Expression DO Statement
   18          | Body
   19          | ε

   20 Expression: Term
   21           | Term LTE Term

   22 Term: Primary
   23     | Primary '+' Term

   24 Primary: '-' Primary
   25        | READ
   26        | Name
   27        | INTEGER_NUM
   28        | '(' Expression ')'

   29 Name: IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 15 28
    ')' (41) 15 28
    '+' (43) 23
    ',' (44) 8
    '-' (45) 24
    '.' (46) 1
    ':' (58) 1 7
    ';' (59) 5 13
    error (256)
    END <info> (258) 12
    VAR <info> (259) 2
    IDENTIFIER <info> (260) 29
    IF <info> (261) 16
    READ <info> (262) 25
    ELSE <info> (263) 16
    THEN <info> (264) 16
    WHILE <info> (265) 17
    OUTPUT <info> (266) 15
    DO <info> (267) 17
    BEGINX <info> (268) 11
    BOOLEAN <info> (269) 10
    INTEGER_NUM <info> (270) 27
    INTEGER <info> (271) 9
    LTE <info> (272) 21
    ASSIGNMENT <info> (273) 14
    PROGRAM <info> (274) 1


Nonterminals, with rules where they appear

    $accept (28)
        on left: 0
    Tiny <dlist> (29)
        on left: 1
        on right: 0
    Dclns <dlist> (30)
        on left: 2 3
        on right: 1
    Dclns_1 <dlist> (31)
        on left: 4 5
        on right: 2 5
    Dcln <dlist> (32)
        on left: 6
        on right: 5
    Dcln_1 <dlist> (33)
        on left: 7 8
        on right: 6 8
    Type <dlist> (34)
        on left: 9 10
        on right: 7
    Body <dlist> (35)
        on left: 11
        on right: 1 18
    Body_1 <dlist> (36)
        on left: 12 13
        on right: 11 13
    Statement <dlist> (37)
        on left: 14 15 16 17 18 19
        on right: 12 13 16 17
    Expression <dlist> (38)
        on left: 20 21
        on right: 14 15 16 17 28
    Term <dlist> (39)
        on left: 22 23
        on right: 20 21 23
    Primary <dlist> (40)
        on left: 24 25 26 27 28
        on right: 22 23 24
    Name <dlist> (41)
        on left: 29
        on right: 1 7 8 14 26


State 0

    0 $accept: • Tiny $end

    PROGRAM  shift, and go to state 1

    Tiny  go to state 2


State 1

    1 Tiny: PROGRAM • Name ':' Dclns Body Name '.'

    IDENTIFIER  shift, and go to state 3

    Name  go to state 4


State 2

    0 $accept: Tiny • $end

    $end  shift, and go to state 5


State 3

   29 Name: IDENTIFIER •

    $default  reduce using rule 29 (Name)


State 4

    1 Tiny: PROGRAM Name • ':' Dclns Body Name '.'

    ':'  shift, and go to state 6


State 5

    0 $accept: Tiny $end •

    $default  accept


State 6

    1 Tiny: PROGRAM Name ':' • Dclns Body Name '.'

    VAR  shift, and go to state 7

    $default  reduce using rule 3 (Dclns)

    Dclns  go to state 8


State 7

    2 Dclns: VAR • Dclns_1

    IDENTIFIER  shift, and go to state 3

    $default  reduce using rule 4 (Dclns_1)

    Dclns_1  go to state 9
    Dcln     go to state 10
    Dcln_1   go to state 11
    Name     go to state 12


State 8

    1 Tiny: PROGRAM Name ':' Dclns • Body Name '.'

    BEGINX  shift, and go to state 13

    Body  go to state 14


State 9

    2 Dclns: VAR Dclns_1 •

    $default  reduce using rule 2 (Dclns)


State 10

    5 Dclns_1: Dcln • ';' Dclns_1

    ';'  shift, and go to state 15


State 11

    6 Dcln: Dcln_1 •

    $default  reduce using rule 6 (Dcln)


State 12

    7 Dcln_1: Name • ':' Type
    8       | Name • ',' Dcln_1

    ':'  shift, and go to state 16
    ','  shift, and go to state 17


State 13

   11 Body: BEGINX • Body_1

    IDENTIFIER  shift, and go to state 3
    IF          shift, and go to state 18
    WHILE       shift, and go to state 19
    OUTPUT      shift, and go to state 20
    BEGINX      shift, and go to state 13

    $default  reduce using rule 19 (Statement)

    Body       go to state 21
    Body_1     go to state 22
    Statement  go to state 23
    Name       go to state 24


State 14

    1 Tiny: PROGRAM Name ':' Dclns Body • Name '.'

    IDENTIFIER  shift, and go to state 3

    Name  go to state 25


State 15

    5 Dclns_1: Dcln ';' • Dclns_1

    IDENTIFIER  shift, and go to state 3

    $default  reduce using rule 4 (Dclns_1)

    Dclns_1  go to state 26
    Dcln     go to state 10
    Dcln_1   go to state 11
    Name     go to state 12


State 16

    7 Dcln_1: Name ':' • Type

    BOOLEAN  shift, and go to state 27
    INTEGER  shift, and go to state 28

    Type  go to state 29


State 17

    8 Dcln_1: Name ',' • Dcln_1

    IDENTIFIER  shift, and go to state 3

    Dcln_1  go to state 30
    Name    go to state 12


State 18

   16 Statement: IF • Expression THEN Statement ELSE Statement

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    INTEGER_NUM  shift, and go to state 32
    '('          shift, and go to state 33
    '-'          shift, and go to state 34

    Expression  go to state 35
    Term        go to state 36
    Primary     go to state 37
    Name        go to state 38


State 19

   17 Statement: WHILE • Expression DO Statement

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    INTEGER_NUM  shift, and go to state 32
    '('          shift, and go to state 33
    '-'          shift, and go to state 34

    Expression  go to state 39
    Term        go to state 36
    Primary     go to state 37
    Name        go to state 38


State 20

   15 Statement: OUTPUT • '(' Expression ')'

    '('  shift, and go to state 40


State 21

   18 Statement: Body •

    $default  reduce using rule 18 (Statement)


State 22

   11 Body: BEGINX Body_1 •

    $default  reduce using rule 11 (Body)


State 23

   12 Body_1: Statement • END
   13       | Statement • ';' Body_1

    END  shift, and go to state 41
    ';'  shift, and go to state 42


State 24

   14 Statement: Name • ASSIGNMENT Expression

    ASSIGNMENT  shift, and go to state 43


State 25

    1 Tiny: PROGRAM Name ':' Dclns Body Name • '.'

    '.'  shift, and go to state 44


State 26

    5 Dclns_1: Dcln ';' Dclns_1 •

    $default  reduce using rule 5 (Dclns_1)


State 27

   10 Type: BOOLEAN •

    $default  reduce using rule 10 (Type)


State 28

    9 Type: INTEGER •

    $default  reduce using rule 9 (Type)


State 29

    7 Dcln_1: Name ':' Type •

    $default  reduce using rule 7 (Dcln_1)


State 30

    8 Dcln_1: Name ',' Dcln_1 •

    $default  reduce using rule 8 (Dcln_1)


State 31

   25 Primary: READ •

    $default  reduce using rule 25 (Primary)


State 32

   27 Primary: INTEGER_NUM •

    $default  reduce using rule 27 (Primary)


State 33

   28 Primary: '(' • Expression ')'

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    INTEGER_NUM  shift, and go to state 32
    '('          shift, and go to state 33
    '-'          shift, and go to state 34

    Expression  go to state 45
    Term        go to state 36
    Primary     go to state 37
    Name        go to state 38


State 34

   24 Primary: '-' • Primary

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    INTEGER_NUM  shift, and go to state 32
    '('          shift, and go to state 33
    '-'          shift, and go to state 34

    Primary  go to state 46
    Name     go to state 38


State 35

   16 Statement: IF Expression • THEN Statement ELSE Statement

    THEN  shift, and go to state 47


State 36

   20 Expression: Term •
   21           | Term • LTE Term

    LTE  shift, and go to state 48

    $default  reduce using rule 20 (Expression)


State 37

   22 Term: Primary •
   23     | Primary • '+' Term

    '+'  shift, and go to state 49

    $default  reduce using rule 22 (Term)


State 38

   26 Primary: Name •

    $default  reduce using rule 26 (Primary)


State 39

   17 Statement: WHILE Expression • DO Statement

    DO  shift, and go to state 50


State 40

   15 Statement: OUTPUT '(' • Expression ')'

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    INTEGER_NUM  shift, and go to state 32
    '('          shift, and go to state 33
    '-'          shift, and go to state 34

    Expression  go to state 51
    Term        go to state 36
    Primary     go to state 37
    Name        go to state 38


State 41

   12 Body_1: Statement END •

    $default  reduce using rule 12 (Body_1)


State 42

   13 Body_1: Statement ';' • Body_1

    IDENTIFIER  shift, and go to state 3
    IF          shift, and go to state 18
    WHILE       shift, and go to state 19
    OUTPUT      shift, and go to state 20
    BEGINX      shift, and go to state 13

    $default  reduce using rule 19 (Statement)

    Body       go to state 21
    Body_1     go to state 52
    Statement  go to state 23
    Name       go to state 24


State 43

   14 Statement: Name ASSIGNMENT • Expression

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    INTEGER_NUM  shift, and go to state 32
    '('          shift, and go to state 33
    '-'          shift, and go to state 34

    Expression  go to state 53
    Term        go to state 36
    Primary     go to state 37
    Name        go to state 38


State 44

    1 Tiny: PROGRAM Name ':' Dclns Body Name '.' •

    $default  reduce using rule 1 (Tiny)


State 45

   28 Primary: '(' Expression • ')'

    ')'  shift, and go to state 54


State 46

   24 Primary: '-' Primary •

    $default  reduce using rule 24 (Primary)


State 47

   16 Statement: IF Expression THEN • Statement ELSE Statement

    IDENTIFIER  shift, and go to state 3
    IF          shift, and go to state 18
    WHILE       shift, and go to state 19
    OUTPUT      shift, and go to state 20
    BEGINX      shift, and go to state 13

    $default  reduce using rule 19 (Statement)

    Body       go to state 21
    Statement  go to state 55
    Name       go to state 24


State 48

   21 Expression: Term LTE • Term

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    INTEGER_NUM  shift, and go to state 32
    '('          shift, and go to state 33
    '-'          shift, and go to state 34

    Term     go to state 56
    Primary  go to state 37
    Name     go to state 38


State 49

   23 Term: Primary '+' • Term

    IDENTIFIER   shift, and go to state 3
    READ         shift, and go to state 31
    INTEGER_NUM  shift, and go to state 32
    '('          shift, and go to state 33
    '-'          shift, and go to state 34

    Term     go to state 57
    Primary  go to state 37
    Name     go to state 38


State 50

   17 Statement: WHILE Expression DO • Statement

    IDENTIFIER  shift, and go to state 3
    IF          shift, and go to state 18
    WHILE       shift, and go to state 19
    OUTPUT      shift, and go to state 20
    BEGINX      shift, and go to state 13

    $default  reduce using rule 19 (Statement)

    Body       go to state 21
    Statement  go to state 58
    Name       go to state 24


State 51

   15 Statement: OUTPUT '(' Expression • ')'

    ')'  shift, and go to state 59


State 52

   13 Body_1: Statement ';' Body_1 •

    $default  reduce using rule 13 (Body_1)


State 53

   14 Statement: Name ASSIGNMENT Expression •

    $default  reduce using rule 14 (Statement)


State 54

   28 Primary: '(' Expression ')' •

    $default  reduce using rule 28 (Primary)


State 55

   16 Statement: IF Expression THEN Statement • ELSE Statement

    ELSE  shift, and go to state 60


State 56

   21 Expression: Term LTE Term •

    $default  reduce using rule 21 (Expression)


State 57

   23 Term: Primary '+' Term •

    $default  reduce using rule 23 (Term)


State 58

   17 Statement: WHILE Expression DO Statement •

    $default  reduce using rule 17 (Statement)


State 59

   15 Statement: OUTPUT '(' Expression ')' •

    $default  reduce using rule 15 (Statement)


State 60

   16 Statement: IF Expression THEN Statement ELSE • Statement

    IDENTIFIER  shift, and go to state 3
    IF          shift, and go to state 18
    WHILE       shift, and go to state 19
    OUTPUT      shift, and go to state 20
    BEGINX      shift, and go to state 13

    $default  reduce using rule 19 (Statement)

    Body       go to state 21
    Statement  go to state 61
    Name       go to state 24


State 61

   16 Statement: IF Expression THEN Statement ELSE Statement •

    $default  reduce using rule 16 (Statement)
